style: :lipstick: fixed scrollbar thickness and removed a div style that was causing issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,10 +39,6 @@
         @apply font-body box-border m-0 p-0 max-w-full overflow-x-hidden;
     }
 
-    div {
-        @apply max-w-[100vw];
-    }
-
     h1 {
         @apply md:text-7xl text-6xl font-bold;
     }
@@ -60,7 +56,7 @@
     }
 
     ::-webkit-scrollbar {
-        @apply h-[10px] w-[10px];
+        @apply h-[7px] w-[7px];
     }
 
     ::-webkit-scrollbar-track {
